# TyuiuProfile

./: .env  main.py  pyproject.toml  requirements.txt
migration/: env.py
src/: config.py
src/app/: application.py
src/app/middlewares/: auth.py  globals.py
src/app/routers/: profile.py
src/app/schemas/: database.py  request.py  response.py  user.py
src/app/schemas/request/: rec_sys.py
src/app/schemas/response/: rec_sys.py
src/app/services/api/: rec_sys.py
src/database/models/: abstract.py  base.py  model.py  profile.py  user.py
src/database/services/: crud.py  db.py  service.py
src/http/: client.py  request.py
